[package]
name = "Rust_Marathon"
version = "0.1.0"
edition = "2024"
default-run = "Rust_Marathon"

[dependencies]
# In Cargo.toml
primitive-types = {version="0.12", features = ["serde"]}
ethers = {version= "2.0", features = ["ws","abigen"]} #Includes Websocket support
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # For advanced error handling
