[package]
name = "rust_marathon"
version = "0.1.0"
edition = "2024"
default-run = "rust_marathon"

[dependencies]

# Core Ethereum dependencies
# ethers = { version = "2.0",features = ["full"] }
# ethers-contract = "2.0"
ethers = "2.0.14"
ethers-contract = "2.0.14"
ethers-providers = "2.0.14"
ethers-signers = "2.0.14"
ethers-core = "2.0.14"
ethers-middleware = "2.0"
anyhow = "1.0" # Error handling
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] } # Async runtime
futures = "0.3" # Stream utilities
ethers-flashbots = "0.15.0"
url = "2.0" # URL handling
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # JSON handling
thiserror = "1.0" # Custom error types
tracing = "0.1"
async-trait = "0.1"
hex-literal = "0.3"
once_cell = "1.18"
tracing-subscriber = "0.3"
dotenv = "0.15" # Environment variables
primitive-types = {version="0.12", features = ["serde"]}
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5"
uuid = { version = "1.0", features = ["v4"] }
tokio-test = "0.4"
chrono = "0.4"